@@ -1,8 +1,8 @@
 # data file for the Fltk User Interface Designer (fluid)
-version 1.0102 
+version 1.0103 
 header_name {../FL/Fl_File_Chooser.H} 
 code_name {.cxx}
-class Fl_File_Chooser {open
+class FL_EXPORT Fl_File_Chooser {open selected
 } {
   decl {enum { SINGLE = 0, MULTI = 1, CREATE = 2, DIRECTORY = 4 };} {public
   }
@@ -116,7 +116,7 @@ window->hide();}
             callback {fileName->value("");
 fileList->deselect();
 Fl::remove_timeout((Fl_Timeout_Handler)previewCB, this);
-window->hide();} selected
+window->hide();}
             private xywh {405 345 75 25}
             code0 {o->label(fl_cancel);}
           }
