@@ -1,4 +1,4 @@
-// generated by Fast Light User Interface Designer (fluid) version 1.0101
+// generated by Fast Light User Interface Designer (fluid) version 1.0103
 
 #include "../FL/Fl_Help_Dialog.H"
 #include "flstring.h"
@@ -113,7 +113,15 @@ Fl_Help_Dialog::Fl_Help_Dialog() {
     o->user_data((void*)(this));
     { Fl_Help_View* o = view_ = new Fl_Help_View(10, 10, 510, 330);
       o->box(FL_DOWN_BOX);
+      o->color(49);
+      o->selection_color(49);
+      o->labeltype(FL_NORMAL_LABEL);
+      o->labelfont(0);
+      o->labelsize(14);
+      o->labelcolor(56);
       o->callback((Fl_Callback*)cb_view_);
+      o->align(FL_ALIGN_TOP);
+      o->when(FL_WHEN_RELEASE);
       o->end();
       Fl_Group::current()->resizable(o);
     }
