@@ -1,6 +1,9 @@
 CHANGES IN FLTK 1.1.3
 
 	- Documentation updates.
+	- FLUID now supports up to two additional qualifiers
+	  before a class name (FL_EXPORT, etc.) to aide in
+	  developing DLL interfaces for WIN32.
 	- Additional NULL checks in Fl_Button,
 	  fl_draw_boxtype(), Fl_File_Chooser, and
 	  Fl_Window::hotspot().
